--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "-WebStatusJS",
+  "name": "webStatusJS",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -14,7 +14,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
